# kubeflow-examples

./: .pylintrc  README.md
.github/workflows/: minimal-mnist.yaml  molecules.yaml
hparam-tuning/minimal-mnist/: README.md  katib-experiment.yaml
images/: README.md
images/mnist-vae/: .gitignore  main.py  pyproject.toml
images/streamlit-example/: Dockerfile  README.md  entrypoint.sh  requirements.txt
mlflow/: mlflow-image-example.ipynb  mlflow-kfp-example.ipynb  mlflow-quickstart-example.ipynb
pipelines/containerized-components/: Dockerfile  README.md  pipeline.py  pyproject.toml
pipelines/containerized-components/src/mobile_price_classification/: split_data.py  test_model.py  train_model.py  tune_hyperparams.py
pipelines/lightweight-components/: mobile-price-classifications.ipynb
pipelines/lightweight-python-package/: README.md  pipeline.py  requirements.txt  submit-cluster.py
pipelines/pipe-fiction/: README.md
pipelines/pipe-fiction/pipe-fiction-codebase/: .dockerignore  Dockerfile  README.md  pyproject.toml
pipelines/pipe-fiction/pipe-fiction-codebase/pipe_fiction/: data_generator.py  data_processor.py
pipelines/pipe-fiction/pipelines/: .gitignore  components.py  pipeline.py  pyproject.toml  run_locally_in_docker.py  run_locally_in_subproc.py  submit_to_cluster_from_kf_notebook.py  submit_to_cluster_from_remote.py
pipelines/pipe-fiction/pipelines/utils/: auth_session.py  debuggable_component.py  kfp_docker_monkey_patches.py
r-studio/mobile-price-classification/: README.md  mobile-price-classification.r
serving/hf-text-embeddings-inference/: Chart.yaml  README.md  values.yaml
serving/hf-vllm-completion/: README.md  inference-service-cpu.yaml  inference-service.yaml
serving/kserve-keda-autoscaling/: README.md  inference-service.yaml  scaled-object.yaml  service-monitor.yaml
serving/minimal-custom-kserve-predictor/: Dockerfile  README.md  inference-service.yaml  main.py  pyproject.toml
serving/minimal-example-shadow-deployment/: README.md  doubler-inference-service.yaml  kustomization.yaml  postgres-crd.yaml  (+1 more)
(+30 files in other folders)
