[project]
name = "mnist-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "ipython>=9.4.0",
    "lightning>=2.5.2",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pytorch-lightning>=2.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
