[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-price-classification"
version = "0.1.0"
description = "Mobile price classification pipeline components"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "pyarrow",
    "scikit-learn",
    "joblib",
    "plotly",
    "s3fs",
]

[tool.setuptools.packages.find]
where = ["src"]
