[project]
name = "pipe-fiction"
version = "0.1.0"
description = "Simple Python package for KFP demo"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipe_fiction"]
