[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.15",
    "docker>=7.1.0",
    "ipdb>=0.13.13",
    "kfp==2.7",
    "pdbpp>=0.11.7",
    "pip>=25.1.1",
    "truststore>=0.10.3",
]
